[package]
name = "temple"
version = "0.0.0"
authors = ["Luis Moreno <morenoluisma@gmail.com>"]
edition = "2018"
description = "WIP"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1"
enumn = "0.1.2"
logos = "0.11.4"
