[package]
name = "temple"
version = "0.0.0"
authors = ["Luis Moreno <morenoluisma@gmail.com>"]
edition = "2018"
description = "WIP"
license = "MIT"
autotests = false

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
enumn = "0.1.3"
lazy_static = "1.4.0"
logos = "0.15.0"
regex = "1.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
